--- a/style1.css
+++ b/style1.css
@@ -7,3 +7,4 @@ title {color:#808080;}
 dt>strong {color: #FF0000;}
 dt {color: #A0522D;}
 #div1 {text-align: center;}
+#appetizers ul{list-style: none;}
